# salt-furo-versioner

./: setup.cfg
src/salt_furo_versioner/: __init__.py
