[metadata]
name = salt-furo-versioner
author = Wayne Werner
author_email = wwerner@vmware.com
long_description = file: README.md
long_description_content_type = text/x-markdown
license = Apache Software License 2.0
zip_safe = False
version=23.1.11
classifiers = 
            Programming Language :: Python
            Programming Language :: Cython
            Programming Language :: Python :: 3
            Programming Language :: Python :: 3 :: Only
            Programming Language :: Python :: 3.5
            Programming Language :: Python :: 3.6
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9


#            Development Status :: 5 - Production/Stable
#            Environment :: Console
#            Intended Audience :: Developers
#            Intended Audience :: Information Technology
#            Intended Audience :: System Administrators
#            License :: OSI Approved :: Apache Software License
#            Operating System :: POSIX :: Linux
#            Topic :: System :: Clustering
#            Topic :: System :: Distributed Computing

[options]
packages = find_namespace:
package_dir = 
    =src
install_requires =
    furo @ git+https://github.com/waynew/furo.git@version-selector 

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
